k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: student-feedback
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: backend
    protocol: TCP
    port: 5000
    targetPort: 5000
