k8s/frontend-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: student-feedback
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: frontend-container
    protocol: TCP
    port: 5173
    targetPort: 80
