k8s/mongo-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: student-feedback
spec:
  selector:
    app: mongo
  type: ClusterIP
  ports:
  - name: mongo-container
    protocol: TCP
    port: 27017
    targetPort: 27017
